compiler/testData/diagnostics/tests/DeferredTypes.kt
// NI_EXPECTED_FILE

interface T {
  konst a = <!PROPERTY_INITIALIZER_IN_INTERFACE!><!UNRESOLVED_REFERENCE!>Foo<!>.<!DEBUG_INFO_MISSING_UNRESOLVED!>bar<!>()<!>
}